apps/qcon/namespace.yaml
# Namespace resource; name is updated by kustomizations
---
apiVersion: v1
kind: Namespace
metadata:
  name: qcon
