apps/qcon/primary-ingress.yaml
# Deploys Ingress resources
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: primary-ingress
  namespace: qcon
  annotations:
    config.fluxcd.io/primary-ingress: "true"
spec:
  tls:
    - hosts:
        - qcon.ltc.bcit.ca
      secretName: star-ltc-bcit-ca
  rules:
    - host: qcon.ltc.bcit.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qcon-web
                port:
                  number: 8080
